upload responsive test site

--- a/index.html
+++ b/index.html
@@ -12,62 +12,62 @@
         <div class="content">
 
             <section>
-                <img src="/images/can.jpg" alt="">
+                <img src="./images/can.jpg" alt="">
                 <p>and</p>
             </section>
 
             <section>
-                <img src="/images/perfect.jpg" alt="">
+                <img src="./images/perfect.jpg" alt="">
                 <p>and</p>
             </section>
 
             <section>
-                <img src="/images/rare.jpg" alt="">
+                <img src="./images/rare.jpg" alt="">
                 <p>and</p>
             </section>
 
             <section>
-                <img src="/images/fun.jpg" alt="">
+                <img src="./images/fun.jpg" alt="">
                 <p>and</p>
             </section>
 
             <section>
-                <img src="/images/time.jpg" alt="">
+                <img src="./images/time.jpg" alt="">
                 <p>and</p>
             </section>
 
             <section>
-                <img src="/images/back.jpg" alt="">
+                <img src="./images/back.jpg" alt="">
                 <p>and</p>
             </section>
 
             <section>
-                <img src="/images/eternity.jpg" alt="">
+                <img src="./images/eternity.jpg" alt="">
                 <p>and</p>
             </section>
 
             <section>
-                <img src="/images/nothing.jpg" alt="">
+                <img src="./images/nothing.jpg" alt="">
                 <p>and</p>
             </section>
 
             <section>
-                <img src="/images/warmth.jpg" alt="">
+                <img src="./images/warmth.jpg" alt="">
                 <p>and</p>
             </section>
 
             <section>
-                <img src="/images/you.jpg" alt="">
+                <img src="./images/you.jpg" alt="">
                 <p>and</p>
             </section>
 
             <section>
-                <img src="/images/sometimes.jpg" alt="">
+                <img src="./images/sometimes.jpg" alt="">
                 <p>and</p>
             </section>
 
             <section>
-                <img src="/images/world.jpg" alt="">
+                <img src="./images/world.jpg" alt="">
                 <p>and dont forget that</p>
             </section>
 
