upload responsive test site

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
         <div class="content">
 
             <section>
-                <img src="./images/can.jpg" alt="">
+                <img src="images/can.jpg" alt="">
                 <p>and</p>
             </section>
 
